<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:menu="@menu/menu">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:text="@string/about_me"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_texto_titulos" />

    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_my_name"
                android:text="@string/texto_mi_nombre"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/size_texto_titulos"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/margin_text_view"
                android:textSize="@dimen/size_text_description"
                android:text="@string/texto_bio" />
        </LinearLayout>
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>